@@ -2,6 +2,7 @@
  * Support multiple folders for user defined compaction tasks (CASSANDRA-11765)
  * Fix race in CompactionStrategyManager's pause/resume (CASSANDRA-11922)
 Merged from 3.x:
+ * Dropping column results in "corrupt" SSTable (CASSANDRA-13337)
  * Exception when computing read-repair for range tombstones (CASSANDRA-12263)
  * Cache local ranges when calculating repair neighbors (CASSANDRA-11933)
  * Don't try to get sstables for non-repairing column families (CASSANDRA-12077)
